# lacewing

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac  faq.html  index.html  style.css
docs/: CurrentThreadID.html  FileExists.html  FileSize.html  GuessMimeType.html  LastModified.html  MD5.html  MD5_Hex.html  NewTempFile.html  PathExists.html  SHA1.html  SHA1_Hex.html  TempPath.html  Version.html  building.html  examples.html  file_exists.html  file_size.html  guess_mimetype.html  index.html  last_modified.html  lw_file_exists.html  lw_file_size.html  lw_guess_mime_type.html  lw_last_modified.html  lw_md5.html  lw_md5_hex.html  lw_path_exists.html  lw_random.html  lw_sha1.html  lw_sha1_hex.html  lw_temp_path.html  lw_version.html  md5.html  md5_hex.html  path_exists.html  random.html  sha1.html  sha1_hex.html  tags.html  temp_path.html  (+1 more)
docs/address/: IPv6.html  Port.html  Ready.html  Resolve.html  ToString.html  index.html  ipv6.html  port.html  tostring.html
docs/client/: Connect.html  Connected.html  Connecting.html  Disconnect.html  ServerAddress.html  connect.html  connected.html  connecting.html  index.html  onConnect.html  onDisconnect.html  onError.html  onReceive.html  on_connect.html  on_data.html  on_disconnect.html  on_error.html  server_address.html
docs/css/: style.css
docs/error/: Add.html  Clone.html  ToString.html  add.html  index.html  tostring.html
docs/eventpump/: PostEventLoopExit.html  StartEventLoop.html  StartSleepyTicking.html  Tick.html  index.html  post_eventloop_exit.html  start_eventloop.html  start_sleepy_ticking.html  tick.html
docs/fdstream/: Cork.html  Nagle.html  SetFD.html  Uncork.html  Valid.html  cork.html  index.html  nagle.html  set_fd.html  uncork.html  valid.html
docs/file/: Open.html  index.html  open.html
docs/filter/: IPv6.html  Local.html  LocalPort.html  Remote.html  RemotePort.html  Reuse.html  index.html  ipv6.html  local.html  local_port.html  remote.html  remote_port.html  reuse.html
docs/flashpolicy/: Host.html  Hosting.html  Unhost.html  host.html  hosting.html  index.html  onError.html  on_error.html  unhost.html
docs/pipe/: index.html
docs/pump/: Add.html  AddUser.html  InUse.html  Post.html  Remove.html  RemoveUser.html  UpdateCallbacks.html  Watch.html  add.html  add_user.html  in_use.html  index.html  post.html  remove.html  remove_user.html  update_callbacks.html  watch.html
docs/server/: AddNPN.html  CanNPN.html  CertificateLoaded.html  ClientCount.html  FirstClient.html  Host.html  Hosting.html  LoadCertificateFile.html  LoadSystemCertificate.html  Port.html  Unhost.html  add_npn.html  can_npn.html  cert_loaded.html  client_first.html  host.html  hosting.html  index.html  load_cert_file.html  load_sys_cert.html  num_clients.html  onConnect.html  onDisconnect.html  onError.html  onReceive.html  on_connect.html  on_data.html  on_disconnect.html  on_error.html  port.html  unhost.html
docs/server/client/: GetAddress.html  NPN.html  Next.html  address.html  index.html  next.html  npn.html
docs/stream/: AddFilterDownstream.html  AddFilterUpstream.html  BeginQueue.html  BytesLeft.html  Close.html  EndQueue.html  IsTransparent.html  Queued.html  Read.html  Write.html  WriteFile.html  add_filter_downstream.html  add_filter_upstream.html  begin_queue.html  bytes_left.html  end_queue.html  index.html  is_transparent.html  onClose.html  onData.html  on_close.html  on_data.html  queued.html  read.html  write.html  write_file.html
docs/sync/: index.html  lock.html  release.html
docs/sync/lock/: index.html
docs/thread/: Join.html  Start.html  Started.html  index.html  join.html  start.html  started.html
docs/timer/: ForceTick.html  Start.html  Started.html  Stop.html  force_tick.html  index.html  onTick.html  on_tick.html  start.html
docs/udp/: Host.html  Hosting.html  Port.html  Unhost.html  Write.html  index.html  onError.html  onReceive.html  on_data.html  on_error.html  send.html  unhost.html
docs/webserver/: CertificateLoaded.html  CloseSession.html  EnableManualRequestFinish.html  Host.html  HostSecure.html  Hosting.html  HostingSecure.html  IdleTimeout.html  LoadCertificateFile.html  LoadSystemCertificate.html  Port.html  SecurePort.html  Unhost.html  UnhostSecure.html  cert_loaded.html  enable_manual_finish.html  host.html  host_secure.html  hosting.html  hosting_secure.html  idle_timeout.html  index.html  load_cert_file.html  load_sys_cert.html  onDisconnect.html  onError.html  onGet.html  onHead.html  onPost.html  onUploadChunk.html  onUploadDone.html  onUploadPost.html  onUploadStart.html  on_disconnect.html  on_error.html  on_get.html  on_head.html  on_post.html  on_upload_chunk.html  on_upload_done.html  (+7 more)
docs/webserver/request/: CloseSession.html  Cookie.html  DisableCache.html  Disconnect.html  EnableDownloadResuming.html  Finish.html  GET.html  GetAddress.html  GuessMimeType.html  Header.html  Hostname.html  IdleTimeout.html  LastModified.html  POST.html  RequestedRangeBegin.html  Secure.html  (+30 more)
examples/ajax/: example-ajax-cxx.vcxproj
examples/get/: example-get-cxx.vcxproj
examples/hello_world/: example-hello-world-c.vcxproj  example-hello-world-cxx.vcxproj
examples/post/: example-post-cxx.vcxproj
examples/send_file/: example-send-file-c.vcxproj  example-send-file-cxx.vcxproj
examples/upload_file/: example-upload-file-cxx.vcxproj
include/: lacewing.h
jni/: config.h
msvc/: liblacewing.vcproj  liblacewing.vcxproj  liblacewing_10.sln
release/: 0.4.0.html  0.4.1.html  0.4.2.html  0.4.3.html  0.5.0.html  0.5.1.html  0.5.2.html  0.5.3.html  0.5.4.html
src/: Error.cc  Filter.cc  FlashPolicy.cc  Stream.cc  address.c  common.h  global.c  lw_common.h  lw_global.c  refcount-dbg.c  refcount-dbg.h  refcount.h  stream.c  streamgraph.c
src/unix/: Client.cc  common.h  eventpump.c  fdstream.c  server.c
src/webserver/: Multipart.cc  request.c
src/windows/: Client.cc  File.cc  Thread.cc  WinSSLClient.cc  fdstream.c  lw_common.h  lw_global_win.c  server.c  thread.c
src/wrappers-c/: stream_flat.cc
(+17 files in other folders)
